# Siemens-EDA-OOP-5G-Analyzer-Emulator

./: .$5G-Analyzer.drawio.bkp  .$5G-Analyzer.drawio.png.bkp  .$5G-Analyzer.drawio.png.dtmp  .gitignore  5G-Analyzer.drawio  CMakeLists.txt  LICENSE  README.md  app.sh  output_packets
Include/EthernetFrame/: ECPRIEthernetFrame.h  EthernetFrame.h  RawEthernetFrame.h
Include/EthernetFrameVisitor/: EthernetFrameVisitor.h  PrinterEthernetFrameVisitor.h
Include/EthernetPacketParser/: EthernetPacketParser.h
Include/EthernetPacketReader/: EthernetPacketReader.h
Include/Logger/: ConsoleLogger.h  FileLogger.h  Logger.h
Include/PacketValidatorVisitor/: EthernetFrameVisitor.h
Include/Printer/: Printer.h
Include/PrinterEthernetFrameVisitor/: PrinterEthernetFrameVisitor.h
Include/Simulator/: Simulator.h
Include/ValidatorEthernetFrame/: ValidatorEthernetFrame.h
Include/ValidatorEthernetFrameVisitor/: ValidatorEthernetFrameVisitor.h
Source/: ECPRIEthernetFrame.cpp  EthernetFrame.cpp  EthernetFrameVisitor.cpp  EthernetPacketParser.cpp  EthernetPacketReader.cpp  Printer.cpp  PrinterEthernetFrameVisitor.cpp  RawEthernetFrame.cpp  Simulator.cpp  ValidatorEthernetFrame.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/Suites/: EthernetFrameTest.cpp
